

Wed Sep 16 CST 2015
- [M] Makefile					[D] --silentoldconfig
-						 >  let Kconfig create include/config/*
-						 >  and include/generated/*
-						 >  Also, we add version.h and utsrelease.h
- [M] scripts/Makefile.build			[D] OK, using .cmd file only!
-						 >  Since fixdep works so well, .d file can NOT
-						 >  be included any more! We want the fixed
-						 >  dependency list to work.
- [M] scripts/basic/fixdep.c			[D] Change linux to sandix


Thu Sep 17 CST 2015
- [+] Diary/09-17-2015				[D] Some words about Makefile
- [+] include/sandix/kconfig.h			[D] IMPORTANT
- [+] Makefile					[D] -include include/sandix/kconfig.h
- [+] scripts/mkcompile_h.sh			[D] Generate: include/generate/compile.h
- [+] arch/x86/boot/version.c			[D] kernel_version string
- [M] arch/x86/boot/header.S			[D] kernel_version support
-						 >  start_of_setup fix: error if setup is
-						 >  not loaded at 0x9000:0000


Fri Sep 18 CST 2015
- [M] arch/x86/boot/tools/build.c		[D] Rewrite, fill holes in header.S
- [M] arch/x86/boot/bootloader.S		[D] Rewrite, read data from header.S


Sun Sep 20 CST 2015
- [M] arch/x86/boot/bootloader.S		[D] Get disk geometry parameters to
- 						 >  load system properly! Ugly assembly!
-						 >  Hmm, ugly, but works.


Mon Sep 21 CST 2015
- [M] Diary/09-21-2015
- [M] arch/x86/boot/bootloader.S		[D] Move kernel from 0x10000 to 0x100000
- [M] arch/x86/boot/pm.c			[D] Pass 0x100000
- [M] arch/x86/pmjump.S				[D] Jump to 0x100000
- [M] arch/x86/kernel/vmSandix.ld.S		[D] Set LOAD_OFFSET to 0xC0000000
-						 >  Add section: brk after bss.
-						 >  brk is used for page tables now.
-						 >  Because we do NOT know how much tables kernel need.
- [M] arch/x86/kernel/head.S			[D] Rewrite, fit to LOAD_OFFSET.
-						 >  Remove early_page_table, use brk_base instead.
-						 >  Map to both virtual address 0 and 0xC0000000.
-						 >  Add kernel_sig to check image integrity.


Tue Sep 22 CST 2015
- [+] scripts/vim-syntax/gas.vim